--- a/Desktop/Project W/spot-price/index.html
+++ b/Desktop/Project W/spot-price/index.html
@@ -17,7 +17,7 @@
         <button onclick="getPrice()">submit</button>
         <p id="answer"></p>
     </div>
-    <p id="testing">0</p>
+    <p id="testing"></p>
 <script src="./index.js"></script>
 </body>
 </html>
