--- a/Desktop/Project W/spot-price/index.html
+++ b/Desktop/Project W/spot-price/index.html
@@ -13,7 +13,8 @@
         <input type="number" class="boxWeight" id="boxWeightA"><br>
         <label for="boxWeight">Weight of cargo B (kg)</label>
         <input type="number" class="boxWeight" id="boxWeightB"><br>
-        <p id="new"></p><button onclick="addBox()">Add box</button>
+        <div id="new"></div>
+        <button onclick="addBox()">Add box</button>
         <button onclick="getPrice()">submit</button>
         <p id="answer"></p>
     </div>
