--- a/Desktop/Project W/spot-price/index.html
+++ b/Desktop/Project W/spot-price/index.html
@@ -17,6 +17,12 @@
         <p id="answer"></p>
     </div>
     <p id="testing"></p>
+    <div class="color-div">
+        <div class="color">yellow</div>
+        <div id="red"></div>
+        <div class="color" id="blue">blue</div>
+
+    </div>
 <script src="./index.js"></script>
 </body>
 </html>
